MODEXPW-614 - Backporting MODEXPW-582 to Sunflower